fix: subs showMoreBtn, menu line only visible in mobile size

--- a/static_devs/css/users/mypage/user/mypage_base.css
+++ b/static_devs/css/users/mypage/user/mypage_base.css
@@ -144,7 +144,7 @@
   cursor: pointer;
 }
 
-/* 모바일용 메뉴 아래 line */
+/* 모바일용 menu 하단 line */
 #line, #selected_line, #background_line{
   display: none;
 }
@@ -179,7 +179,6 @@
 #subscribe_section{
   width:440px;
 }
-
 
 #subs_title_box{
   width:105px;
@@ -346,6 +345,9 @@
   border: solid 1px #020202;
 }
 
+#subs_contents #show_more{
+  display: none;
+}
 
 /* **********qna 확인 섹션********* */
 
